--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@happy-dom/global-registrator": "16.7.3",
+    "@tailwindcss/vite": "4.0.3",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.2.0",
@@ -23,6 +24,7 @@
     "@types/react-dom": "19.0.3",
     "@types/react-redux": "7.1.34",
     "@vitejs/plugin-react": "4.3.4",
+    "tailwindcss": "4.0.3",
     "typescript": "5.7.3",
     "vite": "6.0.11",
     "vite-tsconfig-paths": "5.1.4"
