Migrate styled-components to Tailwind classes

--- a/frontend/.zed/settings.json
+++ b/frontend/.zed/settings.json
@@ -33,7 +33,9 @@
           "classRegex": [
             ":\\s*?[\"'`]([^\"'`]*).*?,",
             "const\\s\\w*Classes\\s+=\\s+[\"'`]([^\"'`]*)",
+            "const\\s\\w*Class\\s+=\\s+[\"'`]([^\"'`]*)",
             "const\\s\\w*_CLASSES\\s+=\\s+[\"'`]([^\"'`]*)",
+            "const\\s\\w*_CLASS\\s+=\\s+[\"'`]([^\"'`]*)",
             "@tw\\s\\*/\\s+[\"'`]([^\"'`]*)"
           ]
         }
