--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -43,7 +43,9 @@
   "tailwindCSS.experimental.classRegex": [
     ":\\s*?[\"'`]([^\"'`]*).*?,",
     "const\\s\\w*Classes\\s+=\\s+[\"'`]([^\"'`]*)",
+    "const\\s\\w*Class\\s+=\\s+[\"'`]([^\"'`]*)",
     "const\\s\\w*_CLASSES\\s+=\\s+[\"'`]([^\"'`]*)",
+    "const\\s\\w*_CLASS\\s+=\\s+[\"'`]([^\"'`]*)",
     "@tw\\s\\*/\\s+[\"'`]([^\"'`]*)"
   ]
 }
