--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@happy-dom/global-registrator": "16.7.3",
-    "@tailwindcss/vite": "4.1.1",
+    "@tailwindcss/vite": "4.1.2",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
@@ -24,9 +24,9 @@
     "@types/react-dom": "19.1.1",
     "@types/react-redux": "7.1.34",
     "@vitejs/plugin-react": "4.3.4",
-    "tailwindcss": "4.1.1",
+    "tailwindcss": "4.1.2",
     "typescript": "5.8.2",
-    "vite": "6.2.4",
+    "vite": "6.2.5",
     "vite-tsconfig-paths": "5.1.4"
   },
   "dependencies": {
@@ -36,6 +36,7 @@
     "@navikt/aksel-icons": "7.18.0",
     "@navikt/ds-css": "7.18.0",
     "@navikt/ds-react": "7.18.0",
+    "@navikt/ds-tailwind": "7.18.0",
     "@navikt/fnrvalidator": "2.1.5",
     "@reduxjs/toolkit": "2.6.1",
     "@slate-yjs/core": "1.0.2",
