--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,31 +14,31 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@happy-dom/global-registrator": "16.7.3",
-    "@tailwindcss/vite": "4.1.2",
+    "@tailwindcss/vite": "4.1.4",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
-    "@types/bun": "1.2.8",
+    "@types/bun": "1.2.11",
     "@types/qs": "6.9.18",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "19.1.1",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "@types/react-redux": "7.1.34",
-    "@vitejs/plugin-react": "4.3.4",
-    "tailwindcss": "4.1.2",
-    "typescript": "5.8.2",
-    "vite": "6.2.5",
+    "@vitejs/plugin-react": "4.4.1",
+    "tailwindcss": "4.1.4",
+    "typescript": "5.8.3",
+    "vite": "6.3.3",
     "vite-tsconfig-paths": "5.1.4"
   },
   "dependencies": {
-    "@grafana/faro-react": "1.14.3",
-    "@grafana/faro-web-sdk": "1.14.3",
-    "@grafana/faro-web-tracing": "1.14.3",
-    "@navikt/aksel-icons": "7.18.0",
-    "@navikt/ds-css": "7.18.0",
-    "@navikt/ds-react": "7.18.0",
-    "@navikt/ds-tailwind": "7.18.0",
+    "@grafana/faro-react": "1.17.1",
+    "@grafana/faro-web-sdk": "1.17.1",
+    "@grafana/faro-web-tracing": "1.17.1",
+    "@navikt/aksel-icons": "7.20.0",
+    "@navikt/ds-css": "7.20.0",
+    "@navikt/ds-react": "7.20.0",
+    "@navikt/ds-tailwind": "7.20.0",
     "@navikt/fnrvalidator": "2.1.5",
-    "@reduxjs/toolkit": "2.6.1",
+    "@reduxjs/toolkit": "2.7.0",
     "@slate-yjs/core": "1.0.2",
     "@styled-icons/fluentui-system-regular": "10.47.0",
     "@udecode/plate": "43.0.5",
@@ -60,9 +60,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "9.2.0",
-    "react-router": "7.4.1",
-    "react-router-dom": "7.4.1",
-    "styled-components": "6.1.17",
-    "yjs": "13.6.23"
+    "react-router": "7.5.1",
+    "react-router-dom": "7.5.1",
+    "styled-components": "6.1.17"
   }
 }
