--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,6 +13,7 @@ jobs:
       id-token: write
     uses: ./.github/workflows/deploy-to-dev.yaml
     secrets:
+      STATUS_API_KEY: ${{ secrets.STATUS_API_KEY }}
       NAIS_WORKLOAD_IDENTITY_PROVIDER: ${{ secrets.NAIS_WORKLOAD_IDENTITY_PROVIDER }}
       READER_TOKEN: ${{ secrets.READER_TOKEN }}
   
