--- a/server/package.json
+++ b/server/package.json
@@ -15,23 +15,24 @@
   },
   "dependencies": {
     "@fastify/cors": "11.0.1",
-    "@fastify/http-proxy": "11.1.2",
+    "@fastify/http-proxy": "11.2.0",
     "@fastify/type-provider-typebox": "5.1.0",
-    "@hocuspocus/common": "2.15.2",
-    "@hocuspocus/server": "2.15.2",
+    "@fastify/websocket": "^11.1.0",
+    "@hocuspocus/common": "3.1.7",
+    "@hocuspocus/server": "3.1.7",
     "@slate-yjs/core": "1.0.2",
-    "@types/node": "22.14.0",
-    "fastify": "5.2.2",
+    "fastify": "5.4.0",
     "fastify-metrics": "12.1.0",
     "jose": "5.9.1",
     "openid-client": "5.7.1",
     "prom-client": "15.1.3",
-    "redis": "4.7.0"
+    "redis": "5.5.6"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/bun": "1.2.8",
+    "@types/bun": "1.2.17",
+    "@types/node": "24.0.3",
     "@types/uuid": "10.0.0",
-    "typescript": "5.8.2"
+    "typescript": "5.8.3"
   }
 }
