--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,14 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.0.5/schema.json",
   "root": true,
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true,
+    "defaultBranch": "main"
+  },
   "assist": {
+    "enabled": true,
     "actions": {
       "source": {
         "organizeImports": "on"
@@ -52,12 +59,15 @@
       }
     }
   },
-  "formatter": { "lineWidth": 120, "indentStyle": "space" },
+  "formatter": { "enabled": true, "lineWidth": 120, "indentStyle": "space" },
   "javascript": {
-    "formatter": { "quoteStyle": "single", "arrowParentheses": "always", "bracketSameLine": false },
+    "formatter": { "enabled": true, "quoteStyle": "single", "arrowParentheses": "always", "bracketSameLine": false },
     "linter": { "enabled": true }
   },
+  "json": {
+    "formatter": { "enabled": true, "trailingCommas": "none" }
+  },
   "files": {
-    "includes": ["**", "!dist/**", "!**/*.css"]
+    "includes": ["**", "!**/*.css"]
   }
 }
