Move common dependencies to repo root

--- a/.github/workflows/update-cache.yaml
+++ b/.github/workflows/update-cache.yaml
@@ -22,6 +22,14 @@ jobs:
         with:
           bun-version: 1.2.11
 
+      - name: Install common dependencies
+        shell: bash
+        env:
+          BUN_AUTH_TOKEN: ${{ secrets.READER_TOKEN }}
+        run: |
+          echo -e "\n[install.scopes]\n\"@navikt\" = { token = \"$BUN_AUTH_TOKEN\", url = \"https://npm.pkg.github.com/\" }" >> bunfig.toml
+          bun install --frozen-lockfile
+
       - name: Install ${{ matrix.apps }} dependencies
         shell: bash
         env:
