--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,25 +8,21 @@
     "build": "vite build",
     "test": "bun test",
     "typecheck": "tsc --noEmit",
-    "lint": "biome check",
-    "migrate": "biome migrate"
+    "lint": "biome check"
   },
   "license": "MIT",
   "devDependencies": {
-    "@biomejs/biome": "2.0.5",
     "@happy-dom/global-registrator": "18.0.1",
     "@tailwindcss/vite": "4.1.10",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
-    "@types/bun": "1.2.17",
     "@types/qs": "6.14.0",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/react-redux": "7.1.34",
     "@vitejs/plugin-react-oxc": "0.2.3",
     "tailwindcss": "4.1.10",
-    "typescript": "5.8.3",
     "vite": "npm:rolldown-vite@latest",
     "vite-tsconfig-paths": "5.1.4"
   },
