--- a/server/package.json
+++ b/server/package.json
@@ -29,10 +29,7 @@
     "redis": "5.5.6"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.0.5",
-    "@types/bun": "1.2.17",
     "@types/node": "24.0.4",
-    "@types/uuid": "10.0.0",
-    "typescript": "5.8.3"
+    "@types/uuid": "10.0.0"
   }
 }
