Update frontend dependencies

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@happy-dom/global-registrator": "18.0.1",
-    "@tailwindcss/vite": "4.1.10",
+    "@tailwindcss/vite": "4.1.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
@@ -22,43 +22,43 @@
     "@types/react-dom": "19.1.6",
     "@types/react-redux": "7.1.34",
     "@vitejs/plugin-react-oxc": "0.2.3",
-    "tailwindcss": "4.1.10",
+    "tailwindcss": "4.1.11",
     "vite": "npm:rolldown-vite@latest",
     "vite-tsconfig-paths": "5.1.4"
   },
   "dependencies": {
-    "@grafana/faro-react": "1.18.2",
-    "@grafana/faro-web-sdk": "1.18.2",
-    "@grafana/faro-web-tracing": "1.18.2",
-    "@hocuspocus/provider": "^3.1.7",
-    "@navikt/aksel-icons": "7.24.0",
-    "@navikt/ds-css": "7.24.0",
-    "@navikt/ds-react": "7.24.0",
-    "@navikt/ds-tailwind": "7.24.0",
+    "@grafana/faro-react": "1.19.0",
+    "@grafana/faro-web-sdk": "1.19.0",
+    "@grafana/faro-web-tracing": "1.19.0",
+    "@hocuspocus/provider": "3.2.0",
+    "@navikt/aksel-icons": "7.25.1",
+    "@navikt/ds-css": "7.25.1",
+    "@navikt/ds-react": "7.25.1",
+    "@navikt/ds-tailwind": "7.25.1",
     "@navikt/fnrvalidator": "2.1.5",
     "@platejs/autoformat": "49.0.0",
     "@platejs/basic-nodes": "49.0.0",
     "@platejs/basic-styles": "49.0.0",
-    "@platejs/core": "49.0.9",
+    "@platejs/core": "49.1.5",
     "@platejs/cursor": "49.0.0",
     "@platejs/docx": "49.0.0",
     "@platejs/indent": "49.0.0",
-    "@platejs/list-classic": "49.0.0",
+    "@platejs/list-classic": "49.1.0",
     "@platejs/resizable": "49.0.0",
-    "@platejs/table": "49.0.1",
-    "@platejs/utils": "49.0.9",
+    "@platejs/table": "49.0.19",
+    "@platejs/utils": "49.1.5",
     "@platejs/yjs": "49.0.0",
     "@reduxjs/toolkit": "2.8.2",
     "@slate-yjs/core": "1.0.2",
     "@styled-icons/fluentui-system-regular": "10.47.0",
-    "platejs": "49.0.9",
+    "platejs": "49.1.5",
     "qs": "6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "9.2.0",
-    "react-router": "7.6.2",
-    "react-router-dom": "7.6.2",
+    "react-router": "7.6.3",
+    "react-router-dom": "7.6.3",
     "styled-components": "6.1.19",
-    "y-webrtc": "^10.3.0"
+    "y-webrtc": "10.3.0"
   }
 }
