--- a/server/package.json
+++ b/server/package.json
@@ -16,20 +16,20 @@
   "dependencies": {
     "@fastify/cors": "11.0.1",
     "@fastify/http-proxy": "11.3.0",
-    "@fastify/type-provider-typebox": "5.1.0",
-    "@fastify/websocket": "^11.1.0",
-    "@hocuspocus/common": "3.1.7",
-    "@hocuspocus/server": "3.1.7",
+    "@fastify/type-provider-typebox": "5.2.0",
+    "@fastify/websocket": "11.2.0",
+    "@hocuspocus/common": "3.2.0",
+    "@hocuspocus/server": "3.2.0",
     "@slate-yjs/core": "1.0.2",
     "fastify": "5.4.0",
     "fastify-metrics": "12.1.0",
     "jose": "5.9.1",
     "openid-client": "5.7.1",
     "prom-client": "15.1.3",
-    "redis": "5.5.6"
+    "redis": "5.6.0"
   },
   "devDependencies": {
-    "@types/node": "24.0.4",
+    "@types/node": "24.0.13",
     "@types/uuid": "10.0.0"
   }
 }
