--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,16 +21,16 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@types/react-redux": "7.1.34",
-    "@vitejs/plugin-react-oxc": "0.2.3",
+    "@vitejs/plugin-react-oxc": "0.3.0",
+    "rolldown-vite": "7.0.10",
     "tailwindcss": "4.1.11",
-    "vite": "npm:rolldown-vite@latest",
     "vite-tsconfig-paths": "5.1.4"
   },
   "dependencies": {
     "@grafana/faro-react": "1.19.0",
     "@grafana/faro-web-sdk": "1.19.0",
     "@grafana/faro-web-tracing": "1.19.0",
-    "@hocuspocus/provider": "3.2.0",
+    "@hocuspocus/provider": "3.2.1",
     "@navikt/aksel-icons": "7.25.1",
     "@navikt/ds-css": "7.25.1",
     "@navikt/ds-react": "7.25.1",
@@ -56,8 +56,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "9.2.0",
-    "react-router": "7.6.3",
-    "react-router-dom": "7.6.3",
+    "react-router": "7.7.0",
+    "react-router-dom": "7.7.0",
     "styled-components": "6.1.19",
     "y-webrtc": "10.3.0"
   }
