--- a/server/biome.json
+++ b/server/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.0.5/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
   "root": false,
   "extends": "//",
   "linter": {
@@ -8,7 +8,7 @@
     },
     "rules": {
       "correctness": {
-        "noNodejsModules": { "level": "off" }
+        "noNodejsModules": "off"
       }
     }
   }
