--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -5,9 +5,10 @@
   "editor.codeActionsOnSave": {
     "quickfix.biome": "always",
     "source.fixAll.biome": "always",
+    "source.biome": "always",
     "source.organizeImports.biome": "always",
     "source.addMissingImports.ts": "never",
-    "source.removeUnusedImports": "explicit"
+    "source.removeUnusedImports": "never"
   },
   "editor.acceptSuggestionOnCommitCharacter": false,
   "typescript.validate.enable": true,
