Remove test focus and make lint fail on focused tests

--- a/biome.json
+++ b/biome.json
@@ -75,7 +75,8 @@
       "suspicious": {
         "noConsole": { "level": "off", "options": { "allow": ["debug", "info", "warn", "error"] } },
         "noReactSpecificProps": { "level": "off" },
-        "noEmptyBlockStatements": { "level": "off" }
+        "noEmptyBlockStatements": { "level": "off" },
+        "noFocusedTests": "error"
       },
       "complexity": {
         "useSimplifiedLogicExpression": { "level": "off" },
