--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "@types/react-dom": "19.1.7",
     "@types/react-redux": "7.1.34",
     "@vitejs/plugin-react": "5.0.0",
-    "rolldown-vite": "7.1.0",
+    "vite": "npm:rolldown-vite@latest",
     "tailwindcss": "4.1.11",
     "vite-tsconfig-paths": "5.1.4"
   },
