--- a/nais/dev.yaml
+++ b/nais/dev.yaml
@@ -1,6 +1,7 @@
 ingresses:
   - https://kabal.intern.dev.nav.no
   - https://kabal.ansatt.dev.nav.no
+kafka_pool: nav-dev
 tenant: trygdeetaten.no
 roles:
   - 7ad08bfe-68d4-4c84-bddd-82d8894fb36e # KABAL_OPPGAVESTYRING_ALLE_ENHETER
