--- a/biome.json
+++ b/biome.json
@@ -73,7 +73,7 @@
         "useConsistentCurlyBraces": { "level": "off", "fix": "none", "options": {} }
       },
       "suspicious": {
-        "noConsole": { "level": "error", "options": { "allow": ["debug", "info", "warn", "error", "[level]"] } },
+        "noConsole": { "level": "error", "fix": "unsafe", "options": { "allow": ["debug", "info", "warn", "error", "[level]"] } },
         "noReactSpecificProps": "off",
         "noEmptyBlockStatements": "error",
         "noFocusedTests": "error"
