--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -3,10 +3,12 @@
   "editor.linkedEditing": true,
   "editor.defaultFormatter": "biomejs.biome",
   "editor.codeActionsOnSave": {
-    "quickfix.biome": "always",
     "source.fixAll.biome": "always",
+    "source.biome": "always",
     "source.organizeImports.biome": "always",
-    "source.addMissingImports.ts": "explicit"
+    "source.addMissingImports.ts": "never",
+    "source.removeUnusedImports": "never",
+    "source.organizeImports": "never"
   },
   "editor.acceptSuggestionOnCommitCharacter": false,
   "typescript.validate.enable": true,
