Update dependencies, Bun and NodeJS

--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -18,7 +18,7 @@
     "bun.lock": true
   },
   "typescript.validate.enable": true,
-  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.tsdk": "../node_modules/typescript/lib",
   "typescript.preferences.importModuleSpecifier": "non-relative",
   "workbench.editor.closeOnFileDelete": true,
   "biome.lsp.bin": "../node_modules/.bin/biome",
