--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -12,8 +12,9 @@
   },
   "editor.acceptSuggestionOnCommitCharacter": false,
   "typescript.validate.enable": true,
-  "typescript.tsdk": "node_modules/typescript/lib",
+  "typescript.tsdk": "../node_modules/typescript/lib",
   "typescript.preferences.importModuleSpecifier": "non-relative",
+  "biome.lsp.bin": "../node_modules/.bin/biome",
   "workbench.editor.closeOnFileDelete": true,
   "npm-intellisense.importQuotes": "'",
   "npm-intellisense.importES6": true,
