--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -4,9 +4,9 @@ on:
   workflow_dispatch:
     inputs:
       e2e_tag:
-        description: "Tag of E2E image to run"
+        description: "Git ref (branch, tag or commit) of E2E image to run"
         required: false
-        default: latest
+        default: main
         type: string
 
 run-name: E2E (${{ inputs.e2e_tag }})
