Reimplement floating toolbar wrapping Plate-natively in order to be able to hide toolbar while drag'n'dropping

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "@platejs/core": "51.0.0",
     "@platejs/cursor": "51.0.0",
     "@platejs/docx": "51.0.0",
+    "@platejs/floating": "52.0.1",
     "@platejs/indent": "51.0.0",
     "@platejs/list-classic": "51.0.0",
     "@platejs/resizable": "51.0.0",
